--- a/.github/workflows/hostloc.yml
+++ b/.github/workflows/hostloc.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
     - master
-  #schedule:
-  #  - cron: 10 23 * * *
+  schedule:
+    - cron: 10 23 * * *
 
 jobs:
   build:
